--- a/web.css
+++ b/web.css
@@ -11,6 +11,11 @@ header {
   background-color: #333;
   padding: 20px;
 }
+p {
+  color: #fff;
+  font-size: 20px;
+  margin-bottom: 10px;
+}
 h1 {
   color: #fff;
   font-size: 20px;
